--- a/SnackBar/app/src/main/res/layout/activity_main.xml
+++ b/SnackBar/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,13 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ContentEdit"
             android:id="@+id/DurationText" android:layout_marginTop="16dp"/>
+    <TextView
+            android:text="@string/Action"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/ActionText" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/RadioGroup"/>
     <RadioGroup
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -45,6 +52,10 @@
                 android:text="@string/Long"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/LongRadio" android:layout_weight="1"/>
+        <RadioButton
+                android:text="@string/Indefinite"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/IndefiniteRadio" android:layout_weight="1"/>
     </RadioGroup>
     <EditText
             android:layout_width="match_parent"
@@ -57,10 +68,37 @@
             android:text="@string/Content_Example"
             app:layout_constraintEnd_toEndOf="parent"
     />
+    <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:ems="10"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/ActionContentEdit"
+            android:text="@string/Action"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintTop_toBottomOf="@+id/ActionSwitch" android:enabled="false"/>
     <Button
             android:text="@string/Dismiss"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" tools:layout_editor_absoluteY="0dp"
+            android:layout_height="wrap_content"
             android:id="@+id/DismissButton" app:layout_constraintStart_toEndOf="@+id/PopSnackbarButton"
-            android:layout_marginStart="16dp" android:onClick="onDismissButtonClicked"/>
+            android:layout_marginStart="16dp" android:onClick="onDismissButtonClicked"
+            app:layout_constraintTop_toTopOf="parent"/>
+    <Switch
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent" android:id="@+id/ActionSwitch"
+            app:layout_constraintTop_toBottomOf="@+id/ActionText"
+            android:checked="false"
+            tools:checked="false" android:showText="false"/>
+    <TextView
+            android:text="@string/Off"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/ActionSwitchText" app:layout_constraintStart_toEndOf="@+id/ActionSwitch"
+            android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Button"
+            app:layout_constraintBottom_toTopOf="@+id/ActionContentEdit" android:layout_marginBottom="4dp"
+    />
 </android.support.constraint.ConstraintLayout>
