--- a/MultiWindow/app/src/main/res/layout/activity_main.xml
+++ b/MultiWindow/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,61 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity">
+        tools:context=".MainActivity" android:layout_margin="16dp">
 
+    <ImageButton
+            android:layout_width="72dp"
+            android:layout_height="72dp" app:srcCompat="@drawable/icon_split"
+            android:id="@+id/SplitButton"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:scaleType="fitCenter" android:onClick="onSplitButtonClicked"/>
+    <ImageButton
+            android:layout_width="72dp"
+            android:layout_height="72dp" app:srcCompat="@drawable/icon_window"
+            android:id="@+id/imageButton2"
+            app:layout_constraintStart_toStartOf="parent"
+            android:scaleType="fitCenter" android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@+id/SplitButton"/>
+    <ImageButton
+            android:layout_width="72dp"
+            android:layout_height="72dp" app:srcCompat="@drawable/icon_pip"
+            android:id="@+id/imageButton3"
+            app:layout_constraintStart_toStartOf="parent"
+            android:scaleType="fitCenter"
+            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageButton2"
+    />
     <TextView
+            android:text="@string/Split_Screen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
+            android:id="@+id/textView" app:layout_constraintStart_toEndOf="@+id/SplitButton"
+            android:layout_marginStart="16dp" app:layout_constraintTop_toTopOf="@+id/SplitButton"
+            app:layout_constraintBottom_toBottomOf="@+id/SplitButton"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
+    <TextView
+            android:text="@string/Freeform"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView2"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintStart_toEndOf="@+id/imageButton2" android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="@+id/imageButton2"
+            app:layout_constraintBottom_toBottomOf="@+id/imageButton2"/>
+    <TextView
+            android:text="@string/PIP"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textView3"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large"
+            app:layout_constraintStart_toEndOf="@+id/imageButton3" android:layout_marginStart="16dp"
+            app:layout_constraintTop_toTopOf="@+id/imageButton3"
+            app:layout_constraintBottom_toBottomOf="@+id/imageButton3"/>
+    <VideoView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/videoView" app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
-
+            app:layout_constraintTop_toBottomOf="@+id/imageButton3" app:layout_constraintVertical_bias="0.0"
+            android:layout_marginTop="16dp"/>
 </android.support.constraint.ConstraintLayout>
