--- a/SnackBar/app/src/main/res/layout/activity_main.xml
+++ b/SnackBar/app/src/main/res/layout/activity_main.xml
@@ -99,6 +99,6 @@
             android:layout_height="wrap_content"
             android:id="@+id/ActionSwitchText" app:layout_constraintStart_toEndOf="@+id/ActionSwitch"
             android:layout_marginStart="8dp" android:textAppearance="@style/TextAppearance.AppCompat.Button"
-            app:layout_constraintBottom_toTopOf="@+id/ActionContentEdit" android:layout_marginBottom="4dp"
-    />
+            app:layout_constraintTop_toTopOf="@+id/ActionSwitch"
+            app:layout_constraintBottom_toBottomOf="@+id/ActionSwitch"/>
 </android.support.constraint.ConstraintLayout>
